# kit_big_data_mangetamain

./: .dockerignore  .gitignore  .pre-commit-config.yaml  .pre-commit-config.yml  404.html  Dockerfile  LICENSE  README.md  Untitled.ipynb  clustering.ipynb  docker-compose-local.yml  docker-compose.yml  index.html  load_data.ipynb  main.py  mkdocs.yml  objects.inv  pyproject.toml  requirements-runtime.txt  sitemap.xml
.github/workflows/: deploy.yml
.streamlit/: config.docker.toml  config.toml
.venv_kit/: pyvenv.cfg
ISSUE_TEMPLATE/: bug_report.md
docs/: git-start.md  playbook-deployment-gcloud.md  playbook-env.md  playbook-https-setup.md  playbook-precommit.md  playbook-troubleshooting.md  profiling.md  streamlit_profile.prof
notebook/: analyse_donnees.ipynb  app.py  clustering.ipynb  clustering_v2.ipynb  clustering_v3.ipynb  clustering_vico.ipynb  hoang_nbs.ipynb  lab-recipe-student.ipynb  load_data.ipynb  load_data_vico.ipynb  load_data_vico_polar.ipynb  nouveau.ipynb  recipe_analyzer.py
playbook-deployment-gcloud/: index.html
playbook-env/: index.html
playbook-https-setup/: index.html
playbook-precommit/: index.html
playbook-troubleshooting/: index.html
profiling/: index.html
reference/SUMMARY/: index.html
reference/mangetamain/__init__/: index.html
reference/mangetamain/backend/__init__/: index.html
reference/mangetamain/backend/data_processor/: index.html
reference/mangetamain/backend/recipe_analyzer/: index.html
reference/mangetamain/streamlit_ui/: index.html
reference/mangetamain/utils/__init__/: index.html
reference/mangetamain/utils/helper/: index.html
reference/mangetamain/utils/logger/: index.html
scripts/: build_docker.sh  build_image.sh  build_lib.sh  gen_ref_pages.py  gloud-setup.sh  init_venv.sh  issue_google_cli  pre-commit.sh  preprocess.sh  pyarrow_issue.txt  setup_https_mangetamain.sh  sync_venv.sh
scripts/archive/: Dockerfile.bak  Dockerfile.bak2  Dockerfile.multistage  build_lib.sh  docker-compose.yml.bak  gloud-setup.sh
search/: search_index.json
src/: app.py
src/mangetamain/: __init__.py  app.py  profiling.py  streamlit_ui.py
src/mangetamain/backend/: __init__.py  data_processor.py  dataloader.py  helper.py  recipe_analyzer.py
src/mangetamain/example/: logger_example.py  logger_example_helper.py
src/mangetamain/frontend/: streamlit_matt.py
src/mangetamain/frontend/core/: data_processor.py  utils.py
src/mangetamain/frontend/pages/: __init__.py  dashboard.py  overview.py  rating.py  recipe_analyzer.py  recipes_analysis.py  test.py  trends.py  users_analysis.py
src/mangetamain/utils/: __init__.py  helper.py  logger.py
src/mypkg/: httphello.py  logger_example.py  logger_example_helper.py
src/utils/: logger.py
test/: test_logger.py
tests/: test_logger.py
tests/unit/: __init__.py
tests/unit/mangetamain/: test_streamlit_ui.py
tests/unit/mangetamain/backend/: __init__.py  test_data_processor.py  test_helper.py  test_recipe_analyzer.py
tests/unit/mangetamain/frontend/pages/: test_dashboard.py
tests/unit/mangetamain/utils/: __init__.py  test_helper.py  test_logger.py
ven_kit/: pyvenv.cfg
